--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
 	
 	<meta property="og:locale" content="en_US" />
 	<meta property="og:type" content="website" />
-	<meta property="og:title" content="Giveaway48 - Collect Daily Rewards, Spins, Coins, Dice" />
-    <meta property="og:description" content="Find the daily free rewards links of your favorite games and claim easily. Play the game and enjoy the free rewards." />
+	<meta property="og:title" content="Top Best Android MOD APK in 2024 [You Should Try]" />
+    <meta property="og:description" content="Get the best and most popular Android MOD APK with all features. You can use them after installing on your phone." />
     <meta property="og:url" content="https://afrin772.github.io/giveaway48/" />
-	<meta property="og:site_name" content="Giveaway48" />
+	<meta property="og:site_name" content="MODAPK" />
 
 
 	<meta name="twitter:card" content="summary_large_image" />
 	
-    <title>Giveaway48 - Collect Daily Rewards, Spins, Coins, Dice</title>
-    <meta name="description" content="Find the daily free rewards links of your favorite games and claim easily. Play the game and enjoy the free rewards." />
+    <title>Top Best Android MOD APK in 2024 [You Should Try]</title>
+    <meta name="description" content="Get the best and most popular Android MOD APK with all features. You can use them after installing on your phone." />
 	<link rel="canonical" href="https://afrin772.github.io/giveaway48/"/>
     <link href="https://fonts.googleapis.com/css?family=Hind+Vadodara:400,700|Mukta:500,700" rel="stylesheet">
     <link rel="stylesheet" href="/css/style.css">
@@ -253,7 +253,7 @@
                     </div>
                     
                 
-                    <div class="footer-copyright">&copy; 2024 Made by Giveaway48 - All rights reserved</div>
+                    <div class="footer-copyright">&copy; 2024 Made by MODAPK - All rights reserved</div>
                 </div>
             </div>
         </footer>
@@ -296,7 +296,7 @@ body {
   {
     "@context" : "https://schema.org",
     "@type" : "WebSite",
-    "name" : "Giveaway48",
+    "name" : "MODAPK",
     "url" : "https://afrin772.github.io/giveaway48/"
 }
   </script>
