--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<meta property="og:type" content="website" />
 	<meta property="og:title" content="Top Best Android MOD APK in 2024 [You Should Try]" />
     <meta property="og:description" content="Get the best and most popular Android MOD APK with all features. You can use them after installing on your phone." />
-    <meta property="og:url" content="https://afrin772.github.io/giveaway48/" />
+    <meta property="og:url" content="https://modapk48.vercel.app/" />
 	<meta property="og:site_name" content="MODAPK" />
 
 
@@ -20,7 +20,7 @@
 	
     <title>Top Best Android MOD APK in 2024 [You Should Try]</title>
     <meta name="description" content="Get the best and most popular Android MOD APK with all features. You can use them after installing on your phone." />
-	<link rel="canonical" href="https://afrin772.github.io/giveaway48/"/>
+	<link rel="canonical" href="https://modapk48.vercel.app/"/>
     <link href="https://fonts.googleapis.com/css?family=Hind+Vadodara:400,700|Mukta:500,700" rel="stylesheet">
     <link rel="stylesheet" href="/css/style.css">
     <link rel="icon" href="/favicon.ico">
@@ -62,6 +62,8 @@
             
             
             <div class="container">
+
+		     <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEj3L1aPpbq2fCuxODZ09cYNT6cT1RxzyON6TlJjmWu1vGbmdhYPAiYWOIIKX_s_oAXxKbgB4ob1L-7DfYnKIzrp9YR-rvjqF6G3x9xOdke49nL_zPumYJYe_vYq50np5YPWc16_FmE5d6O2uDeyCyxhMnaTYmhqMEk6uSdALavv9uJgbviH6w41eGgfpOhM/s1600/app-game.jpg" alt="Apps and Games" class="responsive">
 
 
       <p>
@@ -297,7 +299,7 @@ body {
     "@context" : "https://schema.org",
     "@type" : "WebSite",
     "name" : "MODAPK",
-    "url" : "https://afrin772.github.io/giveaway48/"
+    "url" : "https://modapk48.vercel.app/"
 }
   </script>
 
