--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
     href="https://www.bloglovin.com/@hasanurkazi/pk-xd-mod-apk-install-download-menu-unlimited-5932437"
     >PK XD</a
   >
-  gameplay.
+  gameplay. For real battleground gameplay you can play <a href="https://modapk48.com/free-fire-max-mod-apk/">Free Fire Max</a> on your phone.
 </p>
 <h3>Key Features:</h3>
 <li>Unlimited coins and gems for customizations.</li>
